--- a/pwa.html
+++ b/pwa.html
@@ -11,17 +11,17 @@
   <link rel="manifest" href="/projx/manifest.webmanifest">
 
   <!-- Add to home screen for Safari on iOS. -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="AMP in PWA">
-  <link rel="apple-touch-icon" href="./src/icon.png">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-status-bar-style" content="black">
+  <meta name="mobile-web-app-title" content="AMP in PWA">
+  <link rel="touch-icon" href="./img/icon.png">
 
   <!-- Tile icon for Windows. -->
   <!--
     Note: Webpack doesn't bundle assets URLs in <meta> tags, so this is manually copied to the
     build/ folder during `build` in package.json. "/icon.png" is also used by manifest.webmanifest.
   -->
-  <meta name="msapplication-TileImage" content="/projx/icon.png">
+  <meta name="msapplication-TileImage" content="./img/icon.png">
   <meta name="msapplication-TileColor" content="#fff">
 
   <!-- Asynchronously load the AMP-with-Shadow-DOM runtime library. -->
